# SIP-IVR

./: .gitignore  CMakeLists.txt  README.md  launch.sh
.github/workflows/: build.yml
GstMediaServer/: CMakeLists.txt  Defines.h  MediaServer.cpp  MediaSession.cpp  README.md  RequestHandler.cpp  RequestHandler.h  SessionManager.cpp  SessionManager.h  main.cpp
GstMediaServer/player/: GstBasePlayer.cpp  GstBasePlayer.h  GstPlayer.cpp  GstPlayerContext.cpp  GstPlayerContext.h  GstReceiverPlayer.cpp  GstReceiverPlayer.h  GstSenderPlayer.cpp  GstSenderPlayer.h
GstMediaServer/util/: FileUtil.cpp  HashUtil.h  Log.hpp
IVR/IVRGST/: Application.cpp  Application.hpp  CMakeLists.txt  CallDetails.cpp  DTMFHandler.cpp  DTMFHandler.h  README.md  SipClient.cpp  SipClient.hpp  SipMessageFactory.hpp  SipMessageTypes.h  UdpClient.cpp  main.cpp
IVR/IVRGST/helpers/: Log.hpp  NetUtil.h
IVR/IVRGST/media/: MediaClient.cpp  MediaClient.h  MediaManager.cpp  MediaSession.cpp  MediaSession.h
IVR/IVRGST/model/: SipMessage.cpp  SipSdpMessage.cpp  SipSdpMessage.hpp
IVR/IVRGST/session/: CallSession.cpp  SessionManager.cpp
IVR/IVRServer/: AppDefines.h  Application.cpp  Application.hpp  CMakeLists.txt  DTMFHandler.cpp  DTMFHandler.h  SdpSipMessage.cpp  SdpSipMessage.h  SipMessage.cpp  SipMessage.h  SipMessageFactory.cpp  SipMessageHeaders.h  SipMessageTypes.h  UdpClient.hpp  main.cpp
IVR/IVRServer/helpers/: NetUtil.cpp
IVR/IVRServer/media/: MediaClient.cpp  MediaClient.h  MediaManager.cpp  MediaManager.h  MediaServer.cpp  MediaServer.h  MediaSession.cpp  MediaSession.h  MediaSessionManager.cpp  MediaSessionManager.h
IVR/IVRServer/media-server/: CMakeLists.txt  MediaServer.cpp  MediaServer.h  MediaSession.cpp  MediaSession.h  RequestHandler.cpp  RequestHandler.h  SessionManager.cpp  SessionManager.h  main.cpp
IVR/IVRServer/media-server/player/: GstBasePlayer.cpp  GstBasePlayer.h  GstPlayer.cpp  GstPlayer.h  GstPlayerContext.cpp  GstPlayerContext.h  GstReceiverPlayer.cpp  GstReceiverPlayer.h  GstSenderPlayer.cpp  GstSenderPlayer.h
IVR/IVRServer/media-server/util/: FileUtil.h  HashUtil.cpp
IVR/IVRServer/model/: SipMessage.cpp  SipMessage.hpp  SipSdpMessage.cpp  SipSdpMessage.hpp
IVR/IVRServer/session/: CallSession.cpp  CallSession.hpp  SessionManager.cpp  SessionManager.h
IVR_Application/: build.sh  ivr_app  main.c
SIPSever/: CMakeLists.txt  README.md  main.cpp
SIPSever/src/Helpers/: Log.hpp  UdpServer.cpp  UdpServer.hpp
SIPSever/src/SIP/: RequestsHandler.cpp  RequestsHandler.hpp  Session.cpp  Session.hpp  SipClient.cpp  SipClient.hpp  SipMessage.cpp  SipMessage.hpp  SipMessageFactory.cpp  SipSdpMessage.cpp  SipSdpMessage.hpp  SipServer.cpp
gstmediaserver/: CMakeLists.txt
gstmediaserver/include/: gstmediaserver.h
gstmediaserver/src/: Defines.h  MediaServer.cpp  MediaServer.h  MediaSession.cpp  MediaSession.h  RequestHandler.cpp  RequestHandler.h  SessionManager.cpp  SessionManager.h  gstmediaserver.cpp
gstmediaserver/src/player/: GstBasePlayer.cpp  GstBasePlayer.h  GstPlayer.cpp  GstPlayer.h  GstPlayerContext.cpp  GstPlayerContext.h  GstReceiverPlayer.cpp  GstReceiverPlayer.h  GstSenderPlayer.cpp  GstSenderPlayer.h
gstmediaserver/src/util/: FileUtil.cpp  FileUtil.h  HashUtil.cpp  HashUtil.h  Log.hpp
include/: BaseLogger.hpp  Log.hpp
ivr/gstivr/: CMakeLists.txt
ivr/gstivr/include/: gstivr.h
ivr/gstivr/src/: AppDefines.h  Application.cpp  Application.hpp  CallDetails.cpp  CallDetails.h  DTMFHandler.cpp  DTMFHandler.h  SipClient.cpp  SipClient.hpp  SipMessageFactory.cpp  SipMessageFactory.hpp  SipMessageHeaders.h  SipMessageTypes.h  UdpClient.cpp  UdpClient.hpp  gstivr.cpp
ivr/gstivr/src/helpers/: IDGen.hpp  Log.hpp  NetUtil.cpp  NetUtil.h
ivr/gstivr/src/media/: MediaClient.cpp  MediaClient.h  MediaManager.cpp  MediaManager.h  MediaSession.cpp  MediaSession.h
ivr/gstivr/src/model/: SipMessage.cpp  SipMessage.hpp  SipSdpMessage.cpp  SipSdpMessage.hpp
ivr/gstivr/src/session/: CallSession.cpp  CallSession.hpp  SessionManager.cpp  SessionManager.h
sipserver/: CMakeLists.txt
sipserver/include/: sipserver.h
sipserver/src/Helpers/: IDGen.hpp  Log.hpp  UdpServer.cpp  UdpServer.hpp
sipserver/src/SIP/: RequestsHandler.cpp  RequestsHandler.hpp  Session.cpp  Session.hpp  SipClient.cpp  SipClient.hpp  SipMessage.cpp  SipMessage.hpp  SipMessageFactory.cpp  SipMessageFactory.hpp  SipMessageHeaders.h  SipMessageTypes.h  SipSdpMessage.cpp  SipSdpMessage.hpp  SipServer.cpp  SipServer.hpp
src/: main.cpp
src/Helpers/: UdpServer.cpp
src/SIP/: RequestsHandler.cpp  RequestsHandler.hpp  Session.cpp  Session.hpp  SipMessage.cpp  SipSdpMessage.cpp  SipSdpMessage.hpp  SipServer.cpp
